[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/player/PlatformController.gd" type="Script" id=1]

[node name="PlatformController" type="Node2D"]
script = ExtResource( 1 )

[node name="DashTimer" type="Timer" parent="."]

[node name="ClimbReloadTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="ClimbReloadTimer" to="." method="_on_ClimbTimer_timeout"]
